commit some changes related to image

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <header class="header">
-        <a href="#" class="logo ">KAJOL THAKURs..
+        <a href="#" class="logo ">KAJOL THAKUR..
         </a>
 
         <div class='bx bx-menu ' id="menu_icon">
