--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                             <div class="year"><i class='bx bxs-calendar'></i>2023</div>
                             <h3>REACT</h3>
                             <div class="link">
-                                <a href="#"><i class='bx bx-link-external'></i></a>
+                                <a href="certificate_React_331064.pdf" target="_blank"><i class='bx bx-link-external'></i></a>
                             </div>
 
                             <p>
@@ -306,7 +306,7 @@
         <h2 class="heading">Latest<span> Projects</span></h2>
         <div class="projects-container" data-aos="fade-up" data-aos-duration="3000">
             <div class="projects-box">
-                <img src="/html_css.jpg" alt="" height="250px">
+                <img src="html_css.jpg" alt="" height="250px">
                 <div class="projects-layer">
                     <h4>Dashboard</h4>
 
@@ -316,7 +316,7 @@
 
 
             <div class="projects-box">
-                <img src="/boot1.jpg" alt="" height="250px">
+                <img src="boot1.jpg" alt="" height="250px">
                 <div class="projects-layer">
                     <h4>Website using HTML and CSS</h4>
 
@@ -326,7 +326,7 @@
 
 
             <div class="projects-box">
-                <img src="/dash2.png" alt="" height="250px">
+                <img src="dash2.png" alt="" height="250px">
                 <div class="projects-layer">
                     <h4>Website using Bootstrap</h4>
                     <a href="bootstrap_project/" target="_blank"><i class='bx bx-link-external'></i></a>
