add project and resume

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </p>
 
             <div class="btn-box">
-                <a href="#" class="btn">Download Resume</a>
+                <a href="KAJOL(RESUME).pdf" target="_blank" class="btn">Download Resume</a>
                 <a href="#" class="btn">Hire Me</a>
             </div>
         </div>
