--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@
                 <div class="projects-layer">
                     <h4>Website using HTML and CSS</h4>
 
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="Ecommerce_project/"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
