changes in index file

--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
         </div>
 
         <div class="home-social">
-            <a href="#"><i class='bx bxl-linkedin'></i></a>
-            <a href="#"><i class='bx bxl-github'></i></a>
+            <a href="linkedin.com/in/kajol-thakur-453a69203" target="_blank"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://github.com/kajolthakur" target="_blank"><i class='bx bxl-github'></i></a>
 
         </div>
     </section>
@@ -310,7 +310,7 @@
                 <div class="projects-layer">
                     <h4>Dashboard</h4>
 
-                    <a href="#"><i class='bx bx-link-external'></i></a>
+                    <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
@@ -320,7 +320,7 @@
                 <div class="projects-layer">
                     <h4>Website using HTML and CSS</h4>
 
-                    <a href="Ecommerce_project/"><i class='bx bx-link-external'></i></a>
+                    <a href="Ecommerce_project/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
