--- a/index.html
+++ b/index.html
@@ -308,9 +308,9 @@
             <div class="projects-box">
                 <img src="html_css.jpg" alt="" height="250px">
                 <div class="projects-layer">
-                    <h4>Dashboard</h4>
+                    <h4>Admin Dashboard</h4>
 
-                    <a href="#" target="_blank"><i class='bx bx-link-external'></i></a>
+                    <a href="Dashboard_project/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
 
