--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         </div>
 
         <div class="home-social">
-            <a href="linkedin.com/in/kajol-thakur-453a69203" target="_blank"><i class='bx bxl-linkedin'></i></a>
+            <a href="https://www.linkedin.com/in/kajol-thakur-453a69203/" target="_blank"><i class='bx bxl-linkedin'></i></a>
             <a href="https://github.com/kajolthakur" target="_blank"><i class='bx bxl-github'></i></a>
 
         </div>
@@ -260,7 +260,12 @@
                         </div>
 
                         <div class="progress">
-                            <h3>Javascript<span>65%</span></h3>
+                            <h3>Javascript ES6<span>65%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>React<span>65%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
                     </div>
@@ -285,7 +290,12 @@
                         </div>
 
                         <div class="progress">
-                            <h3>Problem Solver<span>85%</span></h3>
+                            <h3>Problem Solver<span>80%</span></h3>
+                            <div class="bar"><span></span></div>
+                        </div>
+
+                        <div class="progress">
+                            <h3>Creative Imagination<span>85%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
