--- a/index.html
+++ b/index.html
@@ -391,7 +391,8 @@
                 </div>
 
                 <div class="textarea-field">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" itemid="message" required></textarea>
+                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" itemid="message"
+                        required></textarea>
                     <span class="focus"></span>
 
                 </div>
