--- a/index.html
+++ b/index.html
@@ -391,13 +391,13 @@
                 </div>
 
                 <div class="textarea-field">
-                    <textarea name="" id="" cols="30" rows="10" placeholder="Your Message" itemid="message"
+                    <textarea name=""  cols="30" rows="10" placeholder="Your Message" id="message"
                         required></textarea>
                     <span class="focus"></span>
 
                 </div>
                 <div class="btn-box btns">
-                    <button type="submit" class="btn" onclick="sendMail(event)">Send</button>
+                    <button type="button" class="btn" onclick="sendMail(event)">Send</button>
 
                 </div>
             </form>
