final project commit

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Kajol Thakur - Portfolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/boxicons/2.1.0/css/boxicons.min.css"
         integrity="sha512-pVCM5+SN2+qwj36KonHToF2p1oIvoU3bsqxphdOIWMYmgr4ZqD3t5DjKvvetKhXGc/ZG5REYTT6ltKfExEei/Q=="
@@ -52,7 +52,7 @@
             </p>
 
             <div class="btn-box">
-                <a href="RESUME (KAJOL THAKUR).pdf" target="_blank" class="btn">Download Resume</a>
+                <a href="KAJOL_THAKUR_RESUME.pdf" target="_blank" class="btn">Download Resume</a>
                 <a href="#" class="btn">Hire Me</a>
             </div>
         </div>
@@ -78,7 +78,7 @@
 
         <div class="about-content education " data-aos="fade-up" data-aos-duration="3000">
             <h3>Frontend Developer</h3>
-            <p>My name is Kajol Thakur and I had done my Bachelor's Degree in Computer Science and Engineering from
+            <p>My name is Kajol Thakur . I had done my Bachelor's Degree in Computer Science and Engineering from
                 Manav Rachna University . I know to create websites using web
                 languages such as HTML, CSS, Bootstrap and JavaScript that allow users to access and interact with the
                 site .I am always ready to have new experiences and learn new things. I'm very
@@ -95,25 +95,17 @@
                 <h3 class="title">Education</span></h3>
 
                 <div class="education-box">
+
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i>2015-2016</div>
-                            <h3>Class X (CBSE) - The Cambridge International School</h3>
-                            <p>Grade - 81%
+                            <div class="year"><i class='bx bxs-calendar'></i>2023</div>
+                            <h3>FrontEnd Developer (Diploma) - Dice Academy</h3>
+                            <p>
                             </p>
                         </div>
                     </div>
 
-                    <div class="education-content">
-                        <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i>2017-2018</div>
-                            <h3>Class XII (CBSE) - The Cambridge International School</h3>
-                            <p>Grade - 67%
-                            </p>
-                        </div>
-                    </div>
-
-
+                    
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2018-2022</div>
@@ -123,14 +115,26 @@
                         </div>
                     </div>
 
+                    
                     <div class="education-content">
                         <div class="content">
-                            <div class="year"><i class='bx bxs-calendar'></i>2023</div>
-                            <h3>Course (Web Design) - Dice Academy</h3>
-                            <p>
+                            <div class="year"><i class='bx bxs-calendar'></i>2017-2018</div>
+                            <h3>Higher Secondary Education XII (CBSE) - The Cambridge International School</h3>
+                            <p>Grade - 67%
                             </p>
                         </div>
                     </div>
+
+
+                    <div class="education-content">
+                        <div class="content">
+                            <div class="year"><i class='bx bxs-calendar'></i>2015-2016</div>
+                            <h3>Secondary Education X (CBSE) - The Cambridge International School</h3>
+                            <p>Grade - 81%
+                            </p>
+                        </div>
+                    </div>
+
 
                 </div>
             </div>
@@ -202,7 +206,7 @@
                     <div class="education-content">
                         <div class="content">
                             <div class="year"><i class='bx bxs-calendar'></i>2023</div>
-                            <h3>JAVASCRIPT ES6</h3>
+                            <h3>JAVASCRIPT</h3>
                             <div class="link">
                                 <a href="certificate_Java Script Es6_331064.pdf" target="_blank"><i
                                         class='bx bx-link-external'></i></a>
@@ -262,7 +266,7 @@
                         </div>
 
                         <div class="progress">
-                            <h3>Javascript ES6<span>70%</span></h3>
+                            <h3>Javascript<span>70%</span></h3>
                             <div class="bar"><span></span></div>
                         </div>
 
@@ -341,7 +345,7 @@
             <div class="projects-box">
                 <img src="boot1.jpg" alt="" height="250px">
                 <div class="projects-layer">
-                    <h4>Website using HTML and CSS</h4>
+                    <h4>Ecommerce Website</h4>
 
                     <a href="Ecommerce_project/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
@@ -351,7 +355,7 @@
             <div class="projects-box">
                 <img src="dash2.png" alt="" height="250px">
                 <div class="projects-layer">
-                    <h4>Website using Bootstrap</h4>
+                    <h4>Phonepe Website</h4>
                     <a href="bootstrap_project/" target="_blank"><i class='bx bx-link-external'></i></a>
                 </div>
             </div>
